counterapp/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: counterapp-service
  namespace: nithin-nm
spec:
  selector:
    app: counter-app
  ports:
    - protocol: TCP
      port : 5173
      targetPort: 5173
  type : ClusterIP
