counterapp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counterapp-ingress
  namespace: nithin-nm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /counterapp
          backend:
            service:
              name: counterapp-service
              port: 
                number: 5173
        - pathType: Prefix
          path: /nginx
          backend:
            service:
              name: nginx-service
              port:
                number: 8000
